css/src/_typography.css
/*
  TYPOGRAPHY
*/

/* Text base */

body {
  font-family: $font-stack;
  font-size: $text-size;
  color: $text-color;
  background-color: $app-background-color;

  /* only if different from browser default */
  @if $text-weight != 400 {
    font-weight: $text-weight;
  }

  @media $(l) {
    font-size: $text-size-large;
  }
}

/* Headings */

h1,
h2,
h3,
h4,
h5,
h6 {
  /* prevent long words causing the page to overflow */
  word-break: break-word;
  word-wrap: break-word;

  @if $heading-text-weight != 800 AND $heading-text-weight != bold {
    font-weight: $heading-text-weight;
  }

  @if $heading-color != $text-color {
    color: $heading-color;
  }
}

h1 { font-size: $h1-text-size; }
h2 { font-size: $h2-text-size; }
h3 { font-size: $h3-text-size; }
h4 { font-size: $h4-text-size; }
h5 { font-size: $h5-text-size; }
h6 { font-size: $h6-text-size; }

.headline { font-size: $headline-text-size; }

/* Paragraphs */

p {
  line-height: $paragraph-line-height;
}

.lead {
  font-size: $paragraph-lead-text-size;
  font-weight: $paragraph-lead-text-weight;
}

/* Links */

a {
  padding: $link-click-area; /* larger link click area size */
  margin: calc(-1 * $link-click-area);
  color: $link-color;
  text-decoration: none;
  word-wrap: break-word;

  &:hover {
    text-decoration: underline;
  }
}

/* Lists */

/* more space between list items */
li {
  margin-bottom: $li-margin-between;
}

/* list style none */
.lsn {
  padding-left: 0;
  list-style: none;
}

/* Tables */

.table {
  width: 100%;
  border-collapse: collapse;

  th,
  td {
    padding: 0.9rem 1rem;
  }

  tbody > tr:nth-child(odd) {
    background: $background-color-muted;

    /* FIXME: These selector chain makes me sad, come up with a better solution */
    /* & > td:first-child {
      position: relative;

      &::before {
        position: absolute;
        top: 0;
        left: -50vw;
        z-index: -1;
        width: 150vw;
        height: 100%;
        content: "";
        background: $background-color-muted;
      }
    } */
  }
}

@if $native {
  table { @extend .table; }
}

/* Quotes */

/* TODO: New blockquote styles */
/* .blockquote {} */

/* @if $native {
  blockquote { @extend .blockquote; }
} */

/* Code */

.mono,
.code {
  font-family: $font-stack-monospace;
}

.code {
  display: inline-block;
  padding: 0.1em 0.4em;
  color: $code-text-color;
  background-color: $code-background-color;
  border: 1px solid $light-gray1;
  border-radius: $radius;
}

@if $native {
  code { @extend .code; }
}

